@@ -1,3 +1,7 @@
+2013-01-29  Francois-Rene Rideau <tunes@google.com>
+
+	* swank-asdf.lisp: Better upcoming ASDF3 support.
+
 2013-01-20  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-asdf.lisp: Better compatibility with newer ASDF.
